--- a/action.yml
+++ b/action.yml
@@ -3,10 +3,20 @@ author: 'sudosubin'
 description: 'A helper action for releasing actions without hassles.'
 
 inputs:
-  # <INPUTS_NAME>:
-  #   description: ''
-  #   required: true
-  #   default: ''
+  repo-token:
+    description: 'GitHub token.'
+  prepare-command:
+    description: 'The command used to prepare your project.'
+    default: 'yarn install --frozen-lockfile'
+  build-command:
+    description: 'The command used to build your project.'
+    default: 'yarn run build'
+  target-branch:
+    description: 'The branch name you want to publish your release.'
+    default: 'release'
+  create-release:
+    description: 'Whether you create a GitHub release or not. (without updating the package.json version, this step will fail)'
+    default: 'false'
 
 runs:
   using: 'node12'
