--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   },
   "author": "sudosubin <sudosubin@gmail.com>",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "@actions/core": "^1.2.6",
+    "@actions/exec": "^1.0.4"
+  },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^1.4.2",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
