--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: 'Prepare action'
         run: |
-          npm install --global yarn
+          sudo npm install --global yarn
           yarn install --frozen-lockfile
       - name: 'Build action'
         run: |
@@ -24,7 +24,7 @@ jobs:
       - name: 'Test action'
         uses: ./
         with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
           prepare-command: 'yarn install --frozen-lockfile'
           build-command: 'yarn run build'
           target-branch: 'release-test'
+          create-release: 'false'
