--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,9 +8,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '14.x'
       - name: 'Prepare action'
         run: |
-          sudo npm install --global yarn
+          npm install --global yarn
           yarn install --frozen-lockfile
       - name: 'Build action'
         run: |
