--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
   },
   "author": "sudosubin <sudosubin@gmail.com>",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "@actions/core": "^1.2.6",
+    "@actions/exec": "^1.0.4"
+  },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^1.4.2",
+    "@types/node": "^14.14.27",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
     "esbuild": "^0.8.46",
