Replace yarn with tarball

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,7 @@ jobs:
       - name: 'Build action'
         run: |
           yarn run build
+          npm uninstall -g yarn
       - name: 'Test action'
         uses: ./
         with:
