--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "release-helper-action",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "private": true,
   "description": "A helper action for releasing actions without hassles",
   "main": "dist/index.js",
@@ -17,6 +17,7 @@
   "dependencies": {
     "@actions/core": "^1.2.6",
     "@actions/exec": "^1.0.4",
+    "@actions/github": "^4.0.0",
     "@actions/io": "^1.0.2",
     "@actions/tool-cache": "^1.6.1",
     "uuid": "^8.3.2"
