--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,9 +10,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: sudosubin-ppas/release-helper-action@v0.1.2
+      - uses: sudosubin-ppas/release-helper-action@v0.1.3
         with:
           prepare-command: 'yarn install --frozen-lockfile'
           build-command: 'yarn run build'
           target-branch: 'release'
-          create-release: 'false'
+          create-release: 'true'
