Fix with token usage refactored

--- a/action.yml
+++ b/action.yml
@@ -3,6 +3,9 @@ author: 'sudosubin'
 description: 'A helper action for releasing actions without hassles.'
 
 inputs:
+  repo-token:
+    description: 'GitHub token for workflows running.'
+    default: ${{ secrets.GITHUB_TOKEN }}
   prepare-command:
     description: 'The command used to prepare your project.'
     default: 'yarn install --frozen-lockfile'
