Fix to use env variable

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,3 +16,5 @@ jobs:
           build-command: 'yarn run build'
           target-branch: 'release'
           create-release: 'true'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
